Adding Some Style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&family=Patrick+Hand&display=swap" rel="stylesheet">
+
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     
@@ -15,7 +22,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="hero">
             <img src="img/avataaars.png" alt=" Avatar picture of me">
 
             <div>
@@ -25,7 +32,7 @@
             </div>
     </section>
 
-    <section>
+    <section id="bio">
         <div>
             <p> I want to be...</p>
             <p> A travel photographer!</p>
@@ -40,5 +47,10 @@
 
     </section>
     </main>
+
+    <footer>
+        
+        &copy; 2023- Heidi Marshall
+    </footer>
 </body>
 </html>
