Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <section id="bio">
         <div>
+            <h2> Biography </h2>
             <p> I want to be...</p>
             <p> A travel photographer!</p>
             <p> In my free time I...</p>
@@ -44,6 +45,18 @@
 
 
         </div>
+
+    </section>
+
+    <section id="hobbies">
+        <h2>Hobbies</h2>
+
+        <ul>
+        <li> Photography </li>
+        <li> Travelling </li>
+        <li> Rock Climbing </li>
+        <li> Hiking </li>
+        </ul>
 
     </section>
     </main>
