--- a/index.html
+++ b/index.html
@@ -59,6 +59,43 @@
         </ul>
 
     </section>
+
+    <section id="gallery">
+
+        <h2> Photo Gallery </h2>
+
+        <hr>
+
+        <figure>
+
+           <img src="img/golf-course-640w.jpg" alt="golf course">
+
+
+           <figcaption> Golf course with trees in the background </figcaption>
+        </figure>
+    
+
+        <hr>
+
+        <figure>
+            <img src="img/purple-flower-640w.jpg" alt="purple flower">
+
+            <figcaption> Purple flower at the beginning of spring </figcaption>
+
+
+        </figure>
+
+        <hr>
+
+        <figure>
+            <img src="img/lantern-path-640w.jpg" alt="lantern on path">
+
+            <figcaption>Lantern on a walking trail</figcaption>
+
+
+        </figure>
+
+    </section>
     </main>
 
     <footer>
