Complete contact form

--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
             <div id="formElements">
                 <!-- Name -->
                     <label for="name"> Name (required) </label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
 
                 <!-- Email -->
                     <label for="email"> Email (required) </label>
-                    <input type="email" id="email" name="email"  required>
+                    <input type="email" id="email" name="email" placeholder="youremail@email.com"  required>
 
                 <!-- Phone  -->
-                    <label for="phone">nPhone (optional) </label>
-                    <input type="tel" id="phone" name="phone">
+                    <label for="phone"> Phone (optional) </label>
+                    <input type="tel" id="phone" name="phone" placeholder="555-555-5555" >
 
                 <!-- Phone Type -->
                     <label for="phonetype"> Phone Type (optional) </label>
@@ -172,7 +172,7 @@
                 </select>
                 <!-- Message-->
                     <label for="message"> Message (optional) </label>
-                    <textarea id="message" name="message" rows="8"></textarea>
+                    <textarea id="message" name="message" placeholder="Your Message Here!" rows="8"></textarea>
 
                     <!-- Reply -->
                         <fieldset>
