--- a/index.html
+++ b/index.html
@@ -12,13 +12,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&family=Patrick+Hand&display=swap" rel="stylesheet">
 
 <link href="css/style.css" rel="stylesheet">
+<link href="css/nav.css" rel="stylesheet">
 </head>
 <body>
     
     <header>
-        <img src="img/logo-96X96.svg" alt="Blue origami logo">
-        <h1>Web Dev I</h1>
-    </header>
+    <nav class="navbar">
+        <div class="logo"> 
+            <img 
+            src="img/logo-96X96.svg" 
+            class="logo-img"
+            alt="Blue origami logo"/>
+            <h1 class="logo-title">Web Dev I</h1>
+        </div>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#bio"> Bio </a></li>
+                <li><a href="#gallery"> Gallery</a></li>
+                <li><a href="#lit"> Blog </a></li>
+                <li><a href="#contact"> Contact Me </a></li>
+            </ul>
+            </div>
+            </nav>
+            </header>
 
     <main>
         <section id="hero">
