--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav class="navbar">
         <div class="logo"> 
             <img 
-            src="img/logo-96X96.svg" 
+            src="img/favicon-96x96.png" 
             class="logo-img"
-            alt="Blue origami logo"/>
+            alt="logo of initials h-m"/>
             <h1 class="logo-title">Web Dev I</h1>
         </div>
         <div class="navbar-links">
