attempting hamburger menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     
     <header>
     <nav class="navbar">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <div class="ex-out">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span>              <img
+                                    src="img/ex-o-favicon-96x96.png"
+                                    class="ex-button"
+                                    alt="blue x button"
+                </div> </span>
+            </label>
+
+                                <div class="hamburger-menu">
+                                <img
+                                src="img/ham-favicon-96x96.png"
+                                class="ham-menu"
+                                alt="blue hamburger menu"
+                                </div>
+        </div>
+
+        </label>
+
         <div class="logo"> 
             <img 
             src="img/favicon-96x96.png" 
