--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 
-
+<!-- Links to Fonts, Pictures, and Style Sheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <link href="css/nav.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Navbar and Hamburger Menu/Ex-Out Icons, Logo -->
     <header>
     <nav class="navbar">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -56,6 +56,7 @@
             </nav>
             </header>
 
+            <!-- Page Heading -->
     <main>
         <section id="hero">
             <img src="img/avataaars.png" alt=" Avatar picture of me">
@@ -66,6 +67,8 @@
 
             </div>
     </section>
+
+            <!-- Biography/Hobbies -->
 
     <section id="bio">
         <div>
@@ -94,6 +97,9 @@
         </ul>
 
     </section>
+
+
+        <!-- Photo/Video Gallery -->
 
     <section id="gallery">
 
@@ -152,6 +158,9 @@
 
     </section>
 
+
+    <!-- Blog -->
+
     <article id="lit">
 
         <h2> An Excerpt from Pride and Prejudice </h2>
@@ -174,6 +183,7 @@
 
     </article>
 
+    <!-- Contact Form -->
 
     <section id="contact">
 
