Fixing Mobile Responsiveness

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Page Heading -->
     <main>
         <section id="hero">
-            <img src="img/avataaars.png" alt=" Avatar picture of me">
+            <img src="img/avataaars.png" class="pic" alt=" Avatar picture of me">
 
             <div>
                 <p> Heidi Marshall</p>
