Attempting Cleaning Up Code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 
-<!-- Links to Fonts, Pictures, and Style Sheets -->
+      <!-- Links to Fonts, Pictures, and Style Sheets -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -15,7 +16,9 @@
 <link href="css/nav.css" rel="stylesheet">
 </head>
 <body>
+
     <!-- Navbar and Hamburger Menu/Ex-Out Icons, Logo -->
+
     <header>
     <nav class="navbar">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -68,7 +71,7 @@
             </div>
     </section>
 
-            <!-- Biography/Hobbies -->
+            <!-- Biography -->
 
     <section id="bio">
         <div>
@@ -86,6 +89,8 @@
 
     </section>
 
+            <!-- Hobbies -->
+
     <section id="hobbies">
         <h2>Hobbies</h2>
 
@@ -99,7 +104,7 @@
     </section>
 
 
-        <!-- Photo/Video Gallery -->
+           <!-- Photo/Video Gallery -->
 
     <section id="gallery">
 
@@ -147,19 +152,12 @@
             <figcaption> Trees at the beginning of spring. </figcaption>
 
 
-
-        
-
-
-
-
-
     </section>
 
     </section>
 
 
-    <!-- Blog -->
+            <!-- Blog -->
 
     <article id="lit">
 
@@ -183,7 +181,7 @@
 
     </article>
 
-    <!-- Contact Form -->
+            <!-- Contact Form -->
 
     <section id="contact">
 
@@ -195,6 +193,7 @@
             <legend>Contact Form</legend>
 
             <div id="formElements">
+
                 <!-- Name -->
                     <label for="name"> Name (required) </label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -216,6 +215,7 @@
                         <option value="Home"> Home</option>
 
                 </select>
+
                 <!-- Message-->
                     <label for="message"> Message (optional) </label>
                     <textarea id="message" name="message" placeholder="Your Message Here!" rows="8"></textarea>
@@ -250,6 +250,8 @@
 
     </section>
     </main>
+
+                <!-- Footer and Copyright -->
 
     <footer>
         
