--- a/index.html
+++ b/index.html
@@ -18,30 +18,14 @@
 <body>
 
     <!-- Navbar and Hamburger Menu/Ex-Out Icons, Logo -->
-
+   
     <header>
+   
     <nav class="navbar">
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        <div class="ex-out">
-            <label for="nav-toggle" class="nav-toggle-label">
-                <span>              <img
-                                    src="img/ex-o-favicon-96x96.png"
-                                    class="ex-button"
-                                    alt="blue x button"
-                </div> </span>
-            </label>
-
-                                <div class="hamburger-menu">
-                                <img
-                                src="img/ham-favicon-96x96.png"
-                                class="ham-menu"
-                                alt="blue hamburger menu"
-                                </div>
-        </div>
-
+        <input type="checkbox" class="nav-checkbox">
+        <label for="nav-checkbox" class="nav-toggle">
         </label>
-
-        <div class="logo"> 
+         <div class="logo"> 
             <img 
             src="img/favicon-96x96.png" 
             class="logo-img"
@@ -54,8 +38,9 @@
                 <li><a href="#gallery"> Gallery</a></li>
                 <li><a href="#lit"> Blog </a></li>
                 <li><a href="#contact"> Contact Me </a></li>
+                
             </ul>
-            </div>
+            </div> 
             </nav>
             </header>
 
