--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <header>
    
     <nav class="navbar">
-        <input type="checkbox" class="nav-checkbox">
+        <input type="checkbox" id="nav-toggle" class="nav-checkbox">
         <label for="nav-checkbox" class="nav-toggle">
         </label>
+            <label for="nav-toggle" class="nav-checkbox-label">
+                <span></span>
+            </label>
          <div class="logo"> 
             <img 
             src="img/favicon-96x96.png" 
