updating logo to svg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </label>
          <div class="logo"> 
             <img 
-            src="img/favicon-96x96.png" 
+            src="img/hm-freckle-face - Copy.svg" 
             class="logo-img"
             alt="logo of initials h-m"/>
             <h1 class="logo-title">Web Dev I</h1>
