updating bio and hobbies

--- a/index.html
+++ b/index.html
@@ -64,13 +64,7 @@
     <section id="bio">
         <div>
             <h2> Biography </h2>
-            <p> I want to be...</p>
-            <p> A travel photographer!</p>
-            <p> In my free time I...</p>
-            <p> Love rock climbing!</p>
-            <p> I'd love to travel to...</p>
-            <p> Australia!</p>
-
+            <p>Hi, I’m Heidi! I’m from Montclair, New Jersey and have lived there my entire life. I’m lucky to have two dogs, one Australian Shepard mix and one Bulldog mix, who I love so much that I get on their nerves a lot of the time. I am currently studying Visual Arts in hopes to become a photographer, more specifically a travel photographer. I love the outdoors and frequently take hikes. When I can’t get to a hiking trail, I’ll take my dogs on walks around my neighborhood and to parks in my area. Oftentimes, I’ll bring my camera even on short walks, just in case I see something picture worthy. That usually ends up with me taking pictures of the dogs, but a person can never have too many dog pictures!</p>
 
 
         </div>
@@ -83,11 +77,15 @@
         <h2>Hobbies</h2>
 
         <ul>
-        <li> Photography </li>
-        <li> Travelling </li>
-        <li> Rock Climbing </li>
-        <li> Hiking </li>
-        </ul>
+            <li> Photography </li>
+            <li> Travelling </li>
+            <li> Rock Climbing </li>
+            <li> Hiking </li>
+            </ul>
+    
+
+        <p>The first time I picked up a camera was when I was 10 years old, and I knew it was something I really wanted to pursue. I started with taking photos of my friends, family, and pets, but once I reached high school, I learned that I really loved taking pictures of nature. This led to me bringing my trusty camera on hikes, trips, and wherever else I thought I might find an opportunity to capture the beauty of nature.</p>
+        <p>It helps that I adore being outside. When I’m not taking photos, I’m usually hiking or thinking about where I want to go hiking. My ultimate goal is to make it to Australia one day, not just for the hiking trails but also for the beautiful scenery. I also love koalas and would love to see one up close. </p>
 
     </section>
 
@@ -242,6 +240,7 @@
     <footer>
         
         &copy; 2023- Heidi Marshall
+        https://github.com/RVCC-IDMX/about-me-HeidiMarsh 
     </footer>
 </body>
 </html>
