adding blog article examples

--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@
            <p> Overall, SVGs can be very helpful when developing a website, as they are smaller files than raster images, and are able to be scaled up and down while retaining their resolution.</p>
             
 
+            <h2 id="examples"> Examples </h2>
+
+           <figure>
+
+            <img id="pngStar" src="img/favicon-96x96 - Copy.png" alt="blue star design">
+
+            <figcaption id="stardescriptPNG">This is a PNG file. Notice how the lines are pixelated, even at this size. </figcaption>
+
+                <img id="svgStar" src="img/stars - Copy.svg" alt="blue star design in svg form"
+
+                    <figcaption id="stardescriptSVG"> On the other hand, this is an SVG file. Notice how the lines are much sharper than those of the PNG file. </figcaption>
+
+           </figure>
 
         </div>
 
