trying to get netlify badge to work

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- Page Heading -->
     <main>
         <section id="hero">
-            <img src="img/avataaars.png" class="pic" alt=" Avatar picture of me">
+            <img src="img/edited-unsplash-bio-photo.jpg" class="pic" alt="Picture of me">
 
             <div>
                 <p> Heidi Marshall</p>
@@ -169,7 +169,7 @@
 
                 <img id="svgStar" src="img/stars - Copy.svg" alt="blue star design in svg form"
 
-                    <figcaption id="stardescriptSVG"> On the other hand, this is an SVG file. Notice how the lines are much sharper than those of the PNG file. </figcaption>
+            <figcaption id="stardescriptSVG"> On the other hand, this is an SVG file. Notice how the lines are much sharper than those of the PNG file. </figcaption>
 
            </figure>
 
