fixing blog article picture figcaption

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <figcaption id="stardescriptPNG">This is a PNG file. Notice how the lines are pixelated, even at this size. </figcaption>
 
-                <img id="svgStar" src="img/stars - Copy.svg" alt="blue star design in svg form"
+                <img id="svgStar" src="img/stars - Copy.svg" alt="blue star design in svg form">
 
             <figcaption id="stardescriptSVG"> On the other hand, this is an SVG file. Notice how the lines are much sharper than those of the PNG file. </figcaption>
 
